# rhysics

./: .gitignore  Cargo.toml  README.md  create-new.sh  export.sh  test.sh
chapter_0/section_0/boids/: Cargo.toml  index.html
chapter_0/section_0/boids/src/: lib.rs  main.rs
chapter_1/section_1/orders_of_magnitude/: Cargo.toml  index.html
chapter_1/section_1/orders_of_magnitude/src/: lib.rs  main.rs
chapter_4/section_3/projectile_test/: Cargo.toml  index.html
chapter_4/section_3/projectile_test/src/: lib.rs  main.rs  ui.rs
common/: Cargo.toml
common/src/: lib.rs
src/: lib.rs  main.rs
