[workspace]
resolver = "2"
members = [
    "common",
    "chapter_1/section_1/orders_of_magnitude",
    # Add new simulations here or use the create-sim.sh script
    "chapter_0/section_0/boids",
]

[workspace.dependencies]
bevy = { version = "0.17", default-features = false, features = [
    "bevy_asset",
    "bevy_winit", 
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_sprite_render",
    "bevy_ui",
    "webgl2",
    "bevy_text",
    "default_font",
    "multi_threaded",
    "x11",
    "wayland"
] }
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
web-sys = "0.3"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
