[package]
name = "projectile_test"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { workspace = true }
log = { workspace = true }
rhysics-common = { path = "../../../common" }
bevy_egui = "0.38.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { workspace = true }
web-sys = { workspace = true }

[lib]
crate-type = ["cdylib", "rlib"]
